--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+
 .App {
-  text-align: center;
+  width: 90%;
+  margin: auto;
 }
 
 .App-logo {
@@ -28,6 +30,11 @@
   color: #61dafb;
 }
 
+.catName {
+  font-weight: 200;
+  margin: 2rem 0;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +42,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.red {
+  background-color: red;
 }
